[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
async-std = "1.13.1"
dotenv = "0.15.0"
postgres = "0.19.10"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "macros"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
